--- a/package.json
+++ b/package.json
@@ -23,19 +23,20 @@
     "prettier:fix": "prettier --write ./src/**/*.ts"
   },
   "dependencies": {
-    "@medusajs/medusa": "^1.20.7",
     "body-parser": "^1.19.0",
     "express": "^4.17.2",
     "medusa-core-utils": "^1.2.2",
     "typeorm": "^0.3.16"
   },
   "peerDependencies": {
-    "medusa-interfaces": "1.x"
+    "medusa-interfaces": "1.x",
+    "@medusajs/medusa": "1.20.x"
   },
   "devDependencies": {
     "@babel/cli": "^7.14.3",
     "@babel/core": "^7.14.3",
     "@babel/preset-typescript": "^7.21.4",
+    "@medusajs/medusa": "^1.20.10",
     "@stdlib/number-float64-base-normalize": "0.0.8",
     "@types/express": "^4.17.13",
     "@types/jest": "^27.4.0",
