--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
     "build": "cross-env npm run clean && tsc -p tsconfig.json",
     "watch": "cross-env tsc --watch",
     "test": "cross-env jest",
-    "prettier:fix": "prettier --write ./src/**/*.ts"
+    "prettier:fix": "prettier --write ./src/**/*.ts",
+    "lint:fix": "eslint --fix ./src/**/*.ts",
+    "prepare": "husky"
   },
   "dependencies": {
     "body-parser": "^1.19.0",
@@ -29,13 +31,14 @@
     "typeorm": "^0.3.16"
   },
   "peerDependencies": {
-    "medusa-interfaces": "1.x",
-    "@medusajs/medusa": "1.20.x"
+    "@medusajs/medusa": "1.20.x",
+    "medusa-interfaces": "1.x"
   },
   "devDependencies": {
     "@babel/cli": "^7.14.3",
     "@babel/core": "^7.14.3",
     "@babel/preset-typescript": "^7.21.4",
+    "@epic-web/config": "^1.12.0",
     "@medusajs/medusa": "^1.20.10",
     "@stdlib/number-float64-base-normalize": "0.0.8",
     "@types/express": "^4.17.13",
@@ -44,12 +47,15 @@
     "@types/node": "^17.0.8",
     "babel-preset-medusa-package": "^1.1.19",
     "cross-env": "^7.0.3",
-    "eslint": "^6.8.0",
+    "eslint": "^9.11.0",
+    "husky": "^9.1.6",
     "jest": "^27.3.1",
-    "prettier": "^3.3.2",
+    "pinst": "^3.0.0",
+    "prettier": "^3.3.3",
     "rimraf": "^3.0.2",
     "ts-jest": "^27.0.7",
     "ts-loader": "^9.2.6",
     "typescript": "^4.5.2"
-  }
+  },
+  "prettier": "@epic-web/config/prettier"
 }
