--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "@types/mime": "1.3.5",
     "@types/node": "^17.0.8",
     "@types/supertest": "^6.0.2",
+    "ajv": "^8.17.1",
     "babel-preset-medusa-package": "^1.1.19",
     "cross-env": "^7.0.3",
     "eslint": "^9.11.0",
