--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -1,4 +1,4 @@
-name: Publish to npm
+name: Tests + Publish
 
 on:
   release:
@@ -17,14 +17,12 @@ jobs:
   publish:
     runs-on: ubuntu-latest
     needs: test
+    container:
+      image: oven/bun:latest
     steps:
       - uses: actions/checkout@v4
-      - uses: actions/setup-node@v3
-        with:
-          node-version: "20"
-          registry-url: "https://registry.npmjs.org"
-      - run: npm install
-      - run: npm run build
-      - run: npm publish --access public
+      - run: bun install
+      - run: bun build
+      - run: bunx --bun npm publish --access public
         env:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
