--- a/package.json
+++ b/package.json
@@ -22,8 +22,7 @@
     "watch": "cross-env tsc --watch",
     "test": "cross-env jest",
     "prettier:fix": "prettier --write ./src/**/*.ts",
-    "lint:fix": "eslint --fix ./src/**/*.ts",
-    "prepare": "husky"
+    "lint:fix": "eslint --fix ./src/**/*.ts"
   },
   "dependencies": {
     "body-parser": "^1.19.0",
