--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -21,6 +21,8 @@ jobs:
       image: oven/bun:latest
     steps:
       - uses: actions/checkout@v4
+        with:
+          registry-url: "https://registry.npmjs.org"
       - run: bun install
       - run: bun run build
       - run: bunx --bun npm publish --access public
