--- a/package.json
+++ b/package.json
@@ -24,12 +24,6 @@
     "prettier:fix": "prettier --write ./src/**/*.ts",
     "lint:fix": "eslint --fix ./src/**/*.ts"
   },
-  "dependencies": {
-    "body-parser": "^1.19.0",
-    "express": "^4.17.2",
-    "medusa-core-utils": "^1.2.2",
-    "typeorm": "^0.3.16"
-  },
   "peerDependencies": {
     "@medusajs/medusa": "1.20.x",
     "medusa-interfaces": "1.x"
@@ -50,14 +44,18 @@
     "babel-preset-medusa-package": "^1.1.19",
     "cross-env": "^7.0.3",
     "eslint": "^9.11.0",
+    "express": "^4.21.0",
     "husky": "^9.1.6",
+    "ioredis": "^5.4.1",
     "jest": "^27.3.1",
+    "medusa-core-utils": "^1.2.3",
     "pinst": "^3.0.0",
     "prettier": "^3.3.3",
     "rimraf": "^3.0.2",
     "supertest": "^7.0.0",
     "ts-jest": "^27.0.7",
     "ts-loader": "^9.2.6",
+    "typeorm": "^0.3.20",
     "typescript": "^4.5.2"
   },
   "prettier": "@epic-web/config/prettier",
