feat: Added support for Medusa V2
The plugin is now just a tiny middleware that supports plugin options and uses directly the CacheModule available on your Medusa.js project.
The `defaultRateLimit` middleware can now accepts the same PluginOptions, allowing you to have a better granular control on each API route and how they should be limitted for your end users.

--- a/.gitignore
+++ b/.gitignore
@@ -2,11 +2,9 @@
 node_modules
 .DS_store
 .env*
-/*.js
 !index.js
 yarn.lock
 bun.lockb
-eslint.config.mjs
 
 /dist
 
@@ -15,3 +13,5 @@ eslint.config.mjs
 /models
 /subscribers
 /__mocks__
+
+tsconfig.tsbuildinfo
