chore: Enhance build process with new TypeScript configuration
- Added a new build script "build:publish" to package.json for publishing builds.
- Introduced tsconfig.build.json to specify build configurations, including root directory and exclusions.
- Updated tsconfig.json to remove rootDir and ensure consistency with new build settings.
- Modified GitHub Actions workflow to use the new build script for npm publishing.

--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -24,7 +24,7 @@ jobs:
         with:
           registry-url: "https://registry.npmjs.org"
       - run: bun install
-      - run: bun run build
+      - run: bun run build:publish
       - run: bunx --bun npm publish --access public
         env:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
