--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,7 +12,6 @@
     "declaration": true,
     "sourceMap": true,
     "outDir": "./dist",
-    "rootDir": "./src",
     "jsx": "react-jsx",
     "forceConsistentCasingInFileNames": true,
     "resolveJsonModule": true,
@@ -22,6 +21,6 @@
   "exclude": [
     "dist",
     "build",
-    "node_modules",
+    "node_modules"
   ]
 }
